# deepc

./: LICENSE  README.md
include/deepc/: Activation.hpp  DenseLayer.hpp  DenseNetwork.hpp  FloatInitializer.hpp  Layer.hpp  Matrix.hpp  Network.hpp  UniformXavier.hpp  Vector.hpp  ZeroFloatInitializer.hpp  data_processing.h  deepc.h  deepc.hpp  float.h  float.hpp  layer.h  layers.h  matrix.h  vector.h
include/deepc/activation/: Activation.hpp  relu.hpp  sigmoid.hpp  tanh.hpp
include/deepc/differential/: activations.hpp
include/deepc/functional/: activations.hpp
include/deepc/layer/: Dense.hpp
include/deepc/network/: Dense.hpp
include/deepc/neural/: fully_conn_layer.hpp  layer.hpp  network.hpp
include/deepc/random/: number_generator.hpp  uniform_xavier.hpp
include/deepc/rng/: UniformXavier.hpp  Zero.hpp
include/deepc/scalar/: Generator.hpp  precision.hpp
include/deepc/tensor/: Matrix.hpp  Vector.hpp  matrix.hpp  vector.hpp
src/: Activation.cpp  CMakeLists.txt  DenseLayer.cpp  DenseNetwork.cpp  Layer.cpp  Matrix.cpp  Network.cpp  UniformXavier.cpp  Vector.cpp  data_processing.c  float.c  float.cpp  layer.c  matrix.c  vector.c
src/activation/: relu.cpp  sigmoid.cpp  tanh.cpp
src/differential/: activations.cpp
src/functional/: activations.cpp
src/layer/: Dense.cpp
src/network/: Dense.cpp
src/neural/: fully_conn_layer.cpp  network.cpp
src/random/: uniform_xavier.cpp
src/rng/: UniformXavier.cpp
src/scalar/: precision.cpp
src/tensor/: Matrix.cpp  Vector.cpp  matrix.cpp  vector.cpp
test/: CMakeLists.txt  TestDenseLayer.cpp  TestFloat.cpp  TestLayer.cpp  TestLayerDense.cpp  TestScalarPrecision.cpp  TestTensorVector.cpp  TestVector.cpp  matrix.c  test_layer.cpp  test_neural_fully_conn_layer.cpp  test_scalar_precision.cpp  test_tensor_vector.cpp  vector.c
