add_executable(test_scalar_precision test_scalar_precision.cpp)
set_property(TARGET test_scalar_precision PROPERTY CXX_STANDARD 11)
target_link_libraries(test_scalar_precision PRIVATE deepc)

add_executable(test_tensor_vector test_tensor_vector.cpp)
set_property(TARGET test_tensor_vector PROPERTY CXX_STANDARD 11)
target_link_libraries(test_tensor_vector PRIVATE deepc)

add_executable(test_neural_fully_conn_layer test_neural_fully_conn_layer.cpp)
set_property(TARGET test_neural_fully_conn_layer PROPERTY CXX_STANDARD 11)
target_link_libraries(test_neural_fully_conn_layer PRIVATE deepc)

enable_testing()
add_test(NAME TestScalarPrecision COMMAND test_scalar_precision)
add_test(NAME TestTensorVector COMMAND test_tensor_vector)
add_test(NAME TestNeuralFullyConnLayer COMMAND test_neural_fully_conn_layer)